[gd_scene load_steps=2 format=3 uid="uid://bfuadt3q4kyl"]

[ext_resource type="Script" path="res://enemies/common/components/attack_component/attack_component.gd" id="1_wtss0"]

[node name="AttackComponent" type="Area2D"]
collision_mask = 2
script = ExtResource("1_wtss0")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
